--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -50,6 +50,7 @@ sdk_HEADERS =		\
 	validate.h	\
 	window.h	\
 	windowstr.h	\
+	xkbfile.h	\
 	xkbsrv.h	\
 	xkbstr.h	\
 	xorg-server.h
@@ -58,4 +59,4 @@ endif
 AM_CFLAGS = $(DIX_CFLAGS)
 
 EXTRA_DIST = $(sdk_HEADERS) do-not-use-config.h dix-config.h xorg-config.h \
-	xkb-config.h xkbfile.h
+	xkb-config.h
