--- a/include/dix-config.h.in
+++ b/include/dix-config.h.in
@@ -501,4 +501,7 @@
 /* Need the strncasecmp function. */
 #undef NEED_STRNCASECMP
 
+/* Need the strcasestr function. */
+#undef NEED_STRCASESTR
+
 #endif /* _DIX_CONFIG_H_ */
