configure.ac: Fix release date
Instead of putting something that's always wrong, at least just put
unreleased, which will be more obviously wrong if it's, well, in a
release.

--- a/configure.ac
+++ b/configure.ac
@@ -413,7 +413,7 @@ VENDOR_MAN_VERSION="Version ${PACKAGE_VERSION}"
 
 VENDOR_NAME="The X.Org Foundation"
 VENDOR_NAME_SHORT="X.Org"
-RELEASE_DATE="5 September 2007"
+RELEASE_DATE="(unreleased)"
 VENDOR_WEB="http://wiki.x.org"
 
 m4_ifdef([AS_HELP_STRING], , [m4_define([AS_HELP_STRING], m4_defn([AC_HELP_STRING]))])
