--- a/hw/xfree86/os-support/Makefile.am
+++ b/hw/xfree86/os-support/Makefile.am
@@ -3,7 +3,7 @@ DIST_SUBDIRS = bsd bus misc linux solaris sysv sco hurd
 
 sdk_HEADERS = xf86_OSproc.h xf86_OSlib.h assyntax.h
 
-EXTRA_DIST = int10Defines.h xf86OSpriv.h README.OS-lib
+EXTRA_DIST = int10Defines.h xf86OSpriv.h
 
 # to get the grouping semantics right, you have to glom these three together
 # as one library, otherwise libtool will actively defeat your attempts to
