XQuartz: Fixed first-client-can't-connect bug Readded the old exec() server startup path for regression testing. Don't use the dynamic fd addition code since it's not quite working correctly. (cherry picked from commit 08f3fe153edc5ab4ca010e8ce82d5c3fc0ddb72c)

--- a/configure.ac
+++ b/configure.ac
@@ -1545,7 +1545,7 @@ if test "x$XQUARTZ" = xyes; then
 
 	AC_CHECK_LIB([Xplugin],[xp_init],[:])
 
-	CFLAGS="${CFLAGS} -DROOTLESS_WORKAROUND -DNO_ALLOCA"
+	CFLAGS="${CFLAGS} -DROOTLESS_WORKAROUND -DNO_ALLOCA -DXQUARTZ_EXPORTS_LAUNCHD_FD"
 fi
 
 # Support for objc in autotools is minimal and not documented.
