glcontextmodes.[hc] were not added with the removal of the meas symlinks patch.  Copied from mesa head 2008.08.06. (cherry picked from commit 409e1dd1e9524b5c1a1ae58a759da77e587e3780)

--- a/glx/Makefile.am
+++ b/glx/Makefile.am
@@ -89,3 +89,6 @@ libglx_la_SOURCES = \
         swap_interval.c \
         unpack.h \
         xfont.c
+
+EXTRA_DIST = glcontextmodes.h \
+	     glcontextmodes.c 
