Sledgehammer off the DRI2 build system.

--- a/configure.ac
+++ b/configure.ac
@@ -856,13 +856,13 @@ if test "x$DRI" = xyes; then
 	AC_SUBST(GL_CFLAGS)
 fi
 
-AM_CONDITIONAL(DRI2, test "x$DRI2" = xyes)
-if test "x$DRI2" = xyes; then
-	# FIXME: Bump the versions once we have releases of these.
-	AC_DEFINE(DRI2, 1, [Build DRI2 extension])
-	PKG_CHECK_MODULES([DRI2PROTO], [dri2proto >= 1.1])
-	PKG_CHECK_MODULES([LIBDRM], [libdrm >= 2.3.2])
-fi
+#AM_CONDITIONAL(DRI2, test "x$DRI2" = xyes)
+#if test "x$DRI2" = xyes; then
+#	# FIXME: Bump the versions once we have releases of these.
+#	AC_DEFINE(DRI2, 1, [Build DRI2 extension])
+#	PKG_CHECK_MODULES([DRI2PROTO], [dri2proto >= 1.1])
+#	PKG_CHECK_MODULES([LIBDRM], [libdrm >= 2.3.2])
+#fi
 
 AM_CONDITIONAL(XINERAMA, [test "x$XINERAMA" = xyes])
 if test "x$XINERAMA" = xyes; then
