--- a/hw/xfree86/xaa/Makefile.am
+++ b/hw/xfree86/xaa/Makefile.am
@@ -67,7 +67,7 @@ DISTCLEANFILES = $(POLYSEG) \
 sdk_HEADERS = xaa.h xaalocal.h xaarop.h xaaWrapper.h
 EXTRA_DIST = xaacexp.h xaawrap.h xaaLine.c xaaDashLine.c \
              xaaStipple.c xaaTEGlyph.c xaaNonTEGlyph.c xaaBitmap.c \
-             xaaTEGlyphBlt.S XAA.HOWTO
+             XAA.HOWTO
 
 INCLUDES = $(XORG_INCS)
 
