Convert Solaris #ifdef's for <sys/kd.h> to AC_CHECK_HEADERS check
Upcoming virtual terminal support changes in Solaris kernel will provide
<sys/kd.h> on SPARC too, so this gets us ready for them.

--- a/configure.ac
+++ b/configure.ac
@@ -1280,6 +1280,7 @@ if test "x$XORG" = xyes; then
 	  solaris*)
 	  	XORG_OS="solaris"
 		XORG_OS_SUBDIR="solaris"
+		AC_CHECK_HEADERS([sys/kd.h])
 		# This really should be tests for specific features, but the #ifdef's
 		# were done as a simple version check in XFree86 4.x and haven't been 
 		# fixed yet
