XQuartz: Added pasteboard proxy code stripped out of quartz-wm. (cherry picked from commit 1f842c71c35db031a24de646429834d6054adf1d) (cherry picked from commit 144746223d8dc3f6ff2a0e805aa27a6e57df558a)

--- a/configure.ac
+++ b/configure.ac
@@ -1865,6 +1865,7 @@ hw/xquartz/GL/Makefile
 hw/xquartz/bundle/Makefile
 hw/xquartz/doc/Makefile
 hw/xquartz/mach-startup/Makefile
+hw/xquartz/pbproxy/Makefile
 hw/xquartz/xpr/Makefile
 hw/kdrive/Makefile
 hw/kdrive/ephyr/Makefile
