Push server-known properties into xserver-properties.h.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -53,7 +53,8 @@ sdk_HEADERS =		\
 	windowstr.h	\
 	xkbfile.h	\
 	xkbsrv.h	\
-	xkbstr.h
+	xkbstr.h        \
+	xserver-properties.h
 
 nodist_sdk_HEADERS = xorg-server.h
 endif
