--- a/hw/xquartz/mach-startup/Makefile.am
+++ b/hw/xquartz/mach-startup/Makefile.am
@@ -21,8 +21,9 @@ X11_LDADD = \
 	$(top_builddir)/miext/rootless/librootless.la \
 	$(DARWIN_LIBS) $(XSERVER_LIBS) $(XSERVER_SYS_LIBS) -lXplugin -lX11
 
-#	$(top_builddir)/hw/xquartz/GL/libCGLCore.la \
-#	$(top_builddir)/glx/libglx.la
+if INTEGRATED_XPBPROXY
+X11_LDADD += $(top_builddir)/hw/xquartz/pbproxy/libxpbproxy.la
+endif
 
 X11_LDFLAGS =  \
 	-XCClinker -Objc \
@@ -62,4 +63,3 @@ EXTRA_DIST = \
 	launchd_fd.h \
 	mach_startup.defs \
 	mach_startup_types.h
-
