Added dep on applewmproto 1.1.0 (cherry picked from commit b350b066740a2e72585153e35478538cf1bca9ef)

--- a/configure.ac
+++ b/configure.ac
@@ -1534,6 +1534,8 @@ if test "x$XQUARTZ" = xyes; then
 	AC_CHECK_LIB([Xplugin],[xp_init],[:])
 
 	CFLAGS="${CFLAGS} -DROOTLESS_WORKAROUND -DNO_ALLOCA"
+
+	PKG_CHECK_MODULES(APPLEWM, [applewmproto >= 1.1.0])
 fi
 
 # Support for objc in autotools is minimal and not documented.
