Xquartz: Fix parallel builds (cherry picked from commit 1fe7298a3b9a2ed82c612292f9e547cf78f99ae5)

--- a/hw/xquartz/pbproxy/Makefile.am
+++ b/hw/xquartz/pbproxy/Makefile.am
@@ -14,7 +14,7 @@ if !INTEGRATED_XPBPROXY
 
 bin_PROGRAMS = xpbproxy
 xpbproxy_SOURCES = app-main.m
-xpbproxy_LDADD = $(top_builddir)/hw/xquartz/pbproxy/libxpbproxy.la
+xpbproxy_LDADD = libxpbproxy.la
 
 endif
 
