XQuartz: Fixed EXTRA_DIST for new GL files. (cherry picked from commit a11c9052030b44045f037050a5825256b539ed50)

--- a/hw/xquartz/GL/Makefile.am
+++ b/hw/xquartz/GL/Makefile.am
@@ -13,3 +13,7 @@ libCGLCore_la_SOURCES = \
 	indirect.c \
 	capabilities.c \
 	visualConfigs.c
+
+EXTRA_DIST = \
+	capabilities.h \
+	visualConfigs.h
