Remove xf86IODelay

--- a/hw/xfree86/os-support/misc/Makefile.am
+++ b/hw/xfree86/os-support/misc/Makefile.am
@@ -1,7 +1,7 @@
 
 noinst_LTLIBRARIES = libmisc.la
 
-libmisc_la_SOURCES = Delay.c BUSmemcpy.c IODelay.c SlowBcopy.c
+libmisc_la_SOURCES = Delay.c BUSmemcpy.c SlowBcopy.c
 
 #AM_LDFLAGS = -r
 
