xaa: Fix compiler warning (implicit declaration)
xaaInit.c: In function 'XAAInit':
xaaInit.c:201: warning: implicit declaration of function 'miInitializeCompositeWrapper'
xaaInit.c:201: warning: nested extern declaration of 'miInitializeCompositeWrapper'

--- a/hw/xfree86/xaa/Makefile.am
+++ b/hw/xfree86/xaa/Makefile.am
@@ -69,6 +69,6 @@ EXTRA_DIST = xaacexp.h xaawrap.h xaaLine.c xaaDashLine.c \
              xaaStipple.c xaaTEGlyph.c xaaNonTEGlyph.c xaaBitmap.c \
              XAA.HOWTO
 
-INCLUDES = $(XORG_INCS)
+INCLUDES = $(XORG_INCS) -I$(srcdir)/../../../miext/cw
 
 AM_CFLAGS = $(DIX_CFLAGS) $(XORG_CFLAGS)
