XQuartz: Pass along SIGINT and SIGTERM from the stub to X11.app (cherry picked from commit 183ca5d68b4f34e248749f304ce140de11bd451b)

--- a/hw/xquartz/mach-startup/Makefile.am
+++ b/hw/xquartz/mach-startup/Makefile.am
@@ -1,14 +1,12 @@
 AM_CPPFLAGS = \
 	-DBUILD_DATE=\"$(BUILD_DATE)\" \
-	-DXSERVER_VERSION=\"$(VERSION)\" \
-	-DMACHO_STARTUP
+	-DXSERVER_VERSION=\"$(VERSION)\"
 
 x11appdir = $(APPLE_APPLICATIONS_DIR)/X11.app/Contents/MacOS
 x11app_PROGRAMS = X11
 
 dist_X11_SOURCES = \
 	bundle-main.c 
-#	launchd_fd.c
 
 nodist_X11_SOURCES = \
 	mach_startupServer.c \
