Cygwin/X: update to use standard DPMS stubs
Bring Cygwin/X up to date with DPMS API changes by using the standard stubs

Signed-off-by: Jon TURNEY <jon.turney@dronecode.org.uk>

--- a/hw/xwin/Makefile.am
+++ b/hw/xwin/Makefile.am
@@ -120,6 +120,7 @@ SRCS =	InitInput.c \
 	winresource.h \
 	winwindow.h \
 	XWin.rc \
+	$(top_srcdir)/Xext/dpmsstubs.c \
 	$(top_srcdir)/Xi/stubs.c \
 	$(top_srcdir)/mi/miinitext.c \
 	$(top_srcdir)/fb/fbcmap_mi.c \
