XQuartz: CFBundleShortVersionString needs to conform to X.Y.Z as well... sigh (cherry picked from commit 54d20f6d33c347bcb37a0a8287c2d92fed2b9092)

--- a/hw/xquartz/bundle/Info.plist
+++ b/hw/xquartz/bundle/Info.plist
@@ -19,11 +19,9 @@
 	<key>CFBundlePackageType</key>
 		<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-		<string>2.3.2_beta3</string>
+		<string>2.3.2</string>
 	<key>CFBundleVersion</key>
 		<string>2.3.2</string>
-	<key>CFBundleVersionString</key>
-		<string>2.3.2_beta3</string>
 	<key>CFBundleSignature</key>
 		<string>x11a</string>
 	<key>CSResourcesFileMapped</key>
