XQuartz: Initial work on readding GLX to the 1.5 server (cherry picked from commit a186cab6ae82340770c13b37ff5df731ce2a0ceb)

--- a/hw/xquartz/GL/Makefile.am
+++ b/hw/xquartz/GL/Makefile.am
@@ -12,8 +12,10 @@ AM_CPPFLAGS = \
 libCGLCore_la_SOURCES = \
 	indirect.c \
 	capabilities.c \
+	glcontextmodes.c \
 	visualConfigs.c
 
 EXTRA_DIST = \
 	capabilities.h \
+	glcontextmodes.h \
 	visualConfigs.h
