--- a/hw/xquartz/Makefile.am
+++ b/hw/xquartz/Makefile.am
@@ -9,8 +9,13 @@ AM_CPPFLAGS = \
 	-DXFree86Server \
 	-I$(top_srcdir)/miext/rootless
 
-# GL
-SUBDIRS = bundle . xpr mach-startup doc pbproxy
+if GLX
+GL_DIR = GL
+endif
+
+SUBDIRS = bundle . GL xpr mach-startup doc pbproxy
+
+DIST_SUBDIRS = bundle . $(GL_DIR) xpr mach-startup doc pbproxy
 
 libXquartz_la_SOURCES = \
 	$(top_srcdir)/fb/fbcmap_mi.c \
