Set libdrm flags correctly even when only DRI2 is enabled.

--- a/configure.ac
+++ b/configure.ac
@@ -841,14 +841,8 @@ AM_CONDITIONAL(DRI, test "x$DRI" = xyes)
 if test "x$DRI" = xyes; then
 	AC_DEFINE(XF86DRI, 1, [Build DRI extension])
 	PKG_CHECK_MODULES([DRIPROTO], [xf86driproto])
-	PKG_CHECK_MODULES([LIBDRM], [libdrm >= 2.3.0])
 	PKG_CHECK_MODULES([GL], [glproto >= 1.4.1 dri >= 7.1.0])
-	PKG_CHECK_EXISTS(libdrm >= 2.2.0,
-			 [AC_DEFINE([HAVE_LIBDRM_2_2], 1,
-			 [Has version 2.2 (or newer) of the drm library])])
 	AC_SUBST(DRIPROTO_CFLAGS)
-	AC_SUBST(LIBDRM_CFLAGS)
-	AC_SUBST(LIBDRM_LIBS)
 	AC_SUBST(GL_CFLAGS)
 fi
 
@@ -864,6 +858,15 @@ case "$DRI2,$HAVE_DRI2PROTO" in
 		;;
 esac
 AM_CONDITIONAL(DRI2, test "x$DRI2" == xyes)
+
+if test "x$DRI" = xyes || test "x$DRI2" = xyes; then
+	PKG_CHECK_MODULES([LIBDRM], [libdrm >= 2.3.0])
+	PKG_CHECK_EXISTS(libdrm >= 2.2.0,
+			 [AC_DEFINE([HAVE_LIBDRM_2_2], 1,
+			 [Has version 2.2 (or newer) of the drm library])])
+	AC_SUBST(LIBDRM_CFLAGS)
+	AC_SUBST(LIBDRM_LIBS)
+fi
 
 AM_CONDITIONAL(XINERAMA, [test "x$XINERAMA" = xyes])
 if test "x$XINERAMA" = xyes; then
